<?xml version="1.0" encoding="utf-8"?>
<!--
    TANGGAL PENGERJAAN: 22 April 2022
    NIM: 10119110
    NAMA: BANI FAZA RASYADAN
    KELAS: IF-3
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ProfileActivity">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="30sp"/>
    
    <ImageView
        android:layout_marginTop="40dp"
        android:layout_width="500dp"
        android:layout_height="300dp"
        android:src="@drawable/bani"
        android:contentDescription="@string/pictureprofile" />
    
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nim_10119110"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_bani_faza_rasyadan"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kelas_if_3"/>

    <TextView
        android:layout_marginHorizontal="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deskripsi_diri_nsaya_berasal_dan_tinggal_di_kota_bandung_sampai_sekarang_tk_smp_saya_di_bpi_bandung_lalu_setelah_lulus_smp_melanjutkan_pendidikan_di_smkn_13_bandung_jurusan_rekayasa_perangkat_lunak_saat_ini_saya_sedang_menempuh_pendidikan_di_universitas_komputer_indonesia_jurusan_teknik_informatika_semester_6_cita_cita_saya_ingin_menjadi_pengusaha_dan_front_end_developer"/>
    

    

</LinearLayout>